As an app developer I want to get a list of all Calendars to show in my app [#186912682]
